tests/typechecker/pass/018-fun.hyg
let f: (int, int) -> int = fun(x: int, y: int) -> {
    x + y + 2
};
42
