tests/typechecker/fail/036-compound-assign-non-var.hyg
let mutable a: array{int} = array(3, 0);
arrayElem(a, 0) += 1;
assert(true)
